# CLAP-Restart-Test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configurable-notes-port.hpp  event-logger-gui.hpp  event-logger.hpp  event-string.hpp  gui-ext.hpp  log-event.hpp  note-logger-gui.hpp  note-logger-plugin.cpp  notes-port-ext.hpp  plugin.hpp  plugin_cast.hpp
